Guardo cambios en rama Carlos

--- a/santiago_papeleria_frontend/src/app/pages/products/products.component.html
+++ b/santiago_papeleria_frontend/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-[#F2F2F2]">
+cd<div class="min-h-screen bg-[#F2F2F2]">
     <!-- Notification Toast -->
     <app-toast-container></app-toast-container>
 
